added indentions to fit perfect pixel

--- a/source/directions.html
+++ b/source/directions.html
@@ -393,11 +393,11 @@
               </div>
               <div class="step-list__date">
                 <div class="step-list__month">
-                  <svg class="step-list__back" width="14" height="21">
+                  <svg class="step-list__arrow" width="14" height="21">
                     <use xlink:href="img/sprite.svg#arrow-left-thin"></use>
                   </svg>
                   <span class="step-list__month-text text">Март 2019</span>
-                  <svg class="step-list__next" width="14" height="21">
+                  <svg class="step-list__arrow" width="14" height="21">
                     <use xlink:href="img/sprite.svg#arrow-right-thin"></use>
                   </svg>
                 </div>
@@ -569,7 +569,7 @@
               </div>
               <a href="#step2"
                 class="add-plans__button-step add-plans__button-step--outsideflow button button--middle-theme">
-                <span class="button__main-caption">Следующий шаг</span>
+                <span class="add-plans__button-caption button__main-caption">Следующий шаг</span>
                 <svg class="add-plans__arrow" width="10" height="18" viewBox="0 0 10 18"
                   xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#arrow-right-thick"></use>
@@ -1101,7 +1101,7 @@
                 </svg>
                 <div class="step-list__nav-buttons step-list__nav-buttons--1">
                   <a href="#step3" class="add-plans__button-step button button--middle-theme">
-                    <span class="button__main-caption">Следующий шаг</span>
+                    <span class="add-plans__button-caption button__main-caption">Следующий шаг</span>
                     <svg class="add-plans__arrow" width="10" height="18" viewBox="0 0 10 18"
                       xmlns="http://www.w3.org/2000/svg">
                       <use xlink:href="img/sprite.svg#arrow-right-thick"></use>
@@ -1189,8 +1189,8 @@
                 </svg>
               </div>
               <div class="step-list__nav-buttons">
-                <button type="submit" class="add-plans__button-step button button--middle-theme">
-                  <span class="button__main-caption">Отправить</span>
+                <button type="submit" class="add-plans__button-step add-plans__send button button--middle-theme">
+                  <span class="add-plans__button-caption button__main-caption">Отправить</span>
                   <svg class="add-plans__arrow" width="10" height="18" viewBox="0 0 10 18"
                     xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#arrow-right-thick"></use>
@@ -1210,7 +1210,7 @@
       </section>
     </form>
   </main>
-  <footer class="page-footer">
+  <footer class="page-footer page-footer--directions">
     <div class="page-footer__container container">
       <h2 class="visually-hidden">Погнали?</h2>
       <a href="index.html">
@@ -1232,7 +1232,7 @@
         <li class="page-footer__social-item social-list__item">
           <a class="link" href="https://www.facebook.com/htmlacademy">
             <svg
-              class="icon icon--dark-blue icon--footer-background-padding icon--background-padding icon--main-background"
+              class="page-footer__icon page-footer__icon--facebook icon icon--dark-blue icon--background-padding icon--main-background"
               width="20" height="20">
               <use xlink:href="img/sprite.svg#facebook"></use>
             </svg>
@@ -1241,7 +1241,7 @@
         <li class="page-footer__social-item social-list__item">
           <a class="link" href="https://vk.com/htmlacademy">
             <svg
-              class="icon icon--footer-background-padding icon--background-padding icon--dark-blue icon--main-background"
+              class="page-footer__icon page-footer__icon--vk icon icon--background-padding icon--dark-blue icon--main-background"
               width="20" height="20">
               <use xlink:href="img/sprite.svg#vk"></use>
             </svg>
@@ -1249,8 +1249,9 @@
         </li>
         <li class="page-footer__social-item social-list__item">
           <a class="ilink" href="https://www.instagram.com/htmlacademy">
-            <svg class="icon icon--footer-background-padding icon--background-padding icon--main-background" width="20"
-              height="20">
+            <svg
+              class="page-footer__icon page-footer__icon--instogram icon icon--background-padding icon--main-background"
+              width="20" height="20">
               <use xlink:href="img/sprite.svg#instagram"></use>
             </svg>
           </a>
