--- a/source/index.html
+++ b/source/index.html
@@ -785,7 +785,7 @@
             <svg class="profile__tarif-icon icon icon--background-padding icon--grey-background" width="28" height="28">
               <use xlink:href="img/sprite.svg#businessman"></use>
             </svg>
-            <span class="profile__tariffs-text text button__main-caption-small">Показать тарифы для
+            <span class="profile__tariffs-text text">Показать тарифы для
               бизнеса</span>
           </div>
         </a>
