added indentions to fit perfect pixel

--- a/source/directions.html
+++ b/source/directions.html
@@ -18,7 +18,7 @@
   <header
     class="page-header page-header--border-radius page-header--light-theme page-header--height page-header--opened page-header--without-js">
     <div class="container page-header__menu  menu">
-      <a href="#" class="menu__logo-mobile visually-hidden">
+      <a href="#" class="menu__logo-mobile menu__logo-mobile--without-js">
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo.webp 1x, img/logo@2x.webp 2x" type="image/webp">
           <source media="(min-width: 1440px)" srcset="img/logo.png 1x, img/logo@2x.png 2x" type="image/png">
@@ -31,7 +31,7 @@
             height="30" alt="Логотип" />
         </picture>
       </a>
-      <a href="#" class="menu__logo-mobile-dark">
+      <a href="#" class="menu__logo-mobile-dark menu__logo-mobile-dark--without-js">
         <picture>
           <source media="(min-width: 768px)" srcset="img/logo-medium-dark.webp 1x, img/logo-medium-dark@2x.webp 2x"
             type="image/webp">
