--- a/source/companions.html
+++ b/source/companions.html
@@ -232,7 +232,7 @@
               <tr class="filter__latter-row">
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">а</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="/ilands/Australia" class="link filter__country-text text">Австралия</a>
                     </li>
@@ -270,7 +270,7 @@
                 </td>
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">б</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Багамские Острова</a>
                     </li>
@@ -326,7 +326,7 @@
                 </td>
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">в</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Вануату</a>
                     </li>
@@ -346,7 +346,7 @@
                 </td>
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">г</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Габон</a>
                     </li>
@@ -390,7 +390,7 @@
                 </td>
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">д</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Дания</a>
                     </li>
@@ -409,7 +409,7 @@
               <tr class="filter__latter-row">
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">е</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Египет</a>
                     </li>
@@ -417,7 +417,7 @@
                 </td>
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">з</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Замбия</a>
                     </li>
@@ -428,7 +428,7 @@
                 </td>
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">и</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Израиль</a>
                     </li>
@@ -464,7 +464,7 @@
                 </td>
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">к</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Кабо-Верде</a>
                     </li>
@@ -507,7 +507,7 @@
                 </td>
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">л</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Лаос</a>
                     </li>
@@ -541,7 +541,7 @@
               <tr class="filter__latter-row">
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">м</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Маврикий</a>
                     </li>
@@ -573,7 +573,7 @@
                 </td>
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">н</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Намибия</a>
                     </li>
@@ -605,7 +605,7 @@
                 </td>
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">о</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">ОАЭ</a>
                     </li>
@@ -616,7 +616,7 @@
                 </td>
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">п</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Пакистан</a>
                     </li>
@@ -645,7 +645,7 @@
                 </td>
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">р</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Руанда</a>
                     </li>
@@ -661,7 +661,7 @@
               <tr class="filter__latter-row">
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">с</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Сальвадор</a>
                     </li>
@@ -702,7 +702,7 @@
                 </td>
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">т</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Таджикистан</a>
                     </li>
@@ -737,7 +737,7 @@
                 </td>
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">у</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Уганда</a>
                     </li>
@@ -754,7 +754,7 @@
                 </td>
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">ф</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Фиджи</a>
                     </li>
@@ -771,7 +771,7 @@
                 </td>
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">х</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Хорватия</a>
                     </li>
@@ -781,7 +781,7 @@
               <tr class="filter__latter-row">
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">ч</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Чад</a>
                     </li>
@@ -798,7 +798,7 @@
                 </td>
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">ш</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Швейцария</a>
                     </li>
@@ -812,7 +812,7 @@
                 </td>
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">э</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Эквадор</a>
                     </li>
@@ -832,7 +832,7 @@
                 </td>
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">ю</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">ЮАР</a>
                     </li>
@@ -843,7 +843,7 @@
                 </td>
                 <td class="filter__latter-cell alphabet__latter-cell alphabet__letter text">
                   <span class="filter__latter text text--uper">я</span>
-                  <ul class="country-list country-list--large">
+                  <ul class="filter__countries-column country-list country-list--large">
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Ямайка</a>
                     </li>
@@ -905,8 +905,7 @@
         <div class="companions-operations">
           <form action="searchedcompanions.html" method="POST" class="choose-companion">
             <div class="choose-companion__container container">
-              <h2 class="choose-companion__caption text">Подберите <br class="choose-companion__br">идеального <br
-                  class="choose-companion__br">попутчика</h2>
+              <h2 class="choose-companion__caption text">Подберите идеального попутчика</h2>
               <ul class="choose-companion__list companions-list">
                 <li class="choose-companion__item">
                   <div class="choose-companion__select">
