--- a/source/companions.html
+++ b/source/companions.html
@@ -1141,9 +1141,6 @@
                 </div>
                 <div class="companions__card card-list__card card-list__card--indentation">
                   <div class="card-list__preferences">
-                    <!-- <svg class="companions__online-status card-list__offline" width="6" height="7">
-                      <use xlink:href="img/sprite.svg#point"></use>
-                    </svg> -->
                     <div class="companions__user card-list__user">
                       <a href="tanyaprofile.html" class="companions__name text card-list__user-name link">Таня
                         Фирсова</a>
@@ -1189,17 +1186,17 @@
                       <div class="flags-list__country-info">
                         <picture>
                           <source media="(min-width: 768px)"
-                            srcset="img/sri-lanka-flag-medium.webp 1x, img/sri-lanka-flag-medium@2x.webp 2x"
+                            srcset="img/seychelles-flag-medium.webp 1x, img/seychelles-flag-medium@2x.webp 2x"
                             type="image/webp">
                           <source media="(min-width: 768px)"
-                            srcset="img/sri-lanka-flag-medium.png 1x, img/sri-lanka-flag-medium@2x.png 2x"
+                            srcset="img/seychelles-flag-medium.png 1x, img/seychelles-flag-medium@2x.png 2x"
                             type="image/png">
-                          <source srcset="img/sri-lanka-flag-small.webp 1x, img/sri-lanka-flag-small@2x.webp 2x"
+                          <source srcset="img/seychelles-flag-small.webp 1x, img/seychelles-flag-small@2x.webp 2x"
                             type="image/webp">
-                          <img class="companions__flag flags-list__icon flag" src="img/sri-lanka-flag-small.png"
-                            srcset="img/sri-lanka-flag-small@2x.png 2x" width="226" height="30" alt="Флаг Шри-Ланки" />
+                          <img class="companions__flag flags-list__icon flag" src="img/seychelles-flag-small.png"
+                            srcset="img/seychelles-flag-small@2x.png 2x" width="226" height="30" alt="Флаг Шри-Ланки" />
                         </picture>
-                        <span class="flags-list__flag-caption text">ШРИ-ЛАНКА</span>
+                        <span class="flags-list__flag-caption">ШРИ-ЛАНКА</span>
                       </div>
                     </li>
                     <li class="flags-list__item">
@@ -1223,17 +1220,17 @@
                       <div class="flags-list__country-info">
                         <picture>
                           <source media="(min-width: 768px)"
-                            srcset="img/seychelles-flag-medium.webp 1x, img/seychelles-flag-medium@2x.webp 2x"
+                            srcset="img/sri-lanka-flag-medium.webp 1x, img/sri-lanka-flag-medium@2x.webp 2x"
                             type="image/webp">
                           <source media="(min-width: 768px)"
-                            srcset="img/seychelles-flag-medium.png 1x, img/seychelles-flag-medium@2x.png 2x"
+                            srcset="img/sri-lanka-flag-medium.png 1x, img/sri-lanka-flag-medium@2x.png 2x"
                             type="image/png">
-                          <source srcset="img/seychelles-flag-small.webp 1x, img/seychelles-flag-small@2x.webp 2x"
+                          <source srcset="img/sri-lanka-flag-small.webp 1x, img/sri-lanka-flag-small@2x.webp 2x"
                             type="image/webp">
-                          <img class="companions__flag flags-list__icon flag" src="img/seychelles-flag-small.png"
-                            srcset="img/seychelles-flag-small@2x.png 2x" width="226" height="30" alt="Флаг Сейшилы" />
+                          <img class="companions__flag flags-list__icon flag" src="img/sri-lanka-flag-small.png"
+                            srcset="img/sri-lanka-flag-small@2x.png 2x" width="226" height="30" alt="Флаг Сейшилы" />
                         </picture>
-                        <span class="flags-list__flag-caption">СЕЙШИЛЫ</span>
+                        <span class="flags-list__flag-caption text">СЕЙШИЛЫ</span>
                       </div>
                     </li>
                   </ul>
@@ -1315,9 +1312,6 @@
                 </div>
                 <div class="companions__card card-list__card card-list__card--indentation">
                   <div class="card-list__preferences">
-                    <!-- <svg class="companions__online-status card-list__offline" width="6" height="7">
-                      <use xlink:href="img/sprite.svg#point"></use>
-                    </svg> -->
                     <div class="companions__user card-list__user">
                       <a href="petrprofile.html" class="companions__name text card-list__user-name link">Петя Демин</a>
                     </div>
@@ -1464,9 +1458,6 @@
                 </div>
                 <div class="companions__card card-list__card card-list__card--indentation">
                   <div class="card-list__preferences">
-                    <!-- <svg class="companions__online-status card-list__offline" width="6" height="7">
-                      <use xlink:href="img/sprite.svg#point"></use>
-                    </svg> -->
                     <div class="companions__user card-list__user">
                       <a href="markprofile.html" class="companions__name text card-list__user-name link">Марк Смолов</a>
                     </div>
@@ -1639,9 +1630,6 @@
                 </div>
                 <div class="companions__card card-list__card card-list__card--indentation">
                   <div class="card-list__preferences">
-                    <!-- <svg class="companions__online-status card-list__online" width="6" height="7">
-                      <use xlink:href="img/sprite.svg#point"></use>
-                    </svg> -->
                     <div class="companions__user card-list__user">
                       <a href="larisaprofile.html"
                         class="companions__name companions__name--online text card-list__user-name link">Лариса
