fixed some styles

--- a/source/index.html
+++ b/source/index.html
@@ -801,13 +801,15 @@
           </p>
         </header>
         <form action="https://echo.htmlacademy.ru" method="POST" class="feedback__registration">
-          <input type="email" class="feedback__email text text--default" placeholder="E-mail" required />
-          <button class="feedback__send-email button" type="submit">
-            <span class="feedback__button-text button__main-caption">Регистрация</span>
-            <svg class="icon icon--arrow" width="11" height="12">
-              <use xlink:href="img/sprite.svg#arrow-right-thick"></use>
-            </svg>
-          </button>
+          <div class="feedback__button">
+            <input type="email" class="feedback__email text text--default" placeholder="E-mail" required />
+            <button class="feedback__send-email button" type="submit">
+              <span class="feedback__button-text button__main-caption">Регистрация</span>
+              <svg class="icon icon--arrow" width="11" height="12">
+                <use xlink:href="img/sprite.svg#arrow-right-thick"></use>
+              </svg>
+            </button>
+          </div>
         </form>
         <p class="text feedback__any-questions">
           Остались вопросы?<br class="feedback__any-questions-br">
