--- a/source/companions.html
+++ b/source/companions.html
@@ -13,7 +13,7 @@
   <header
     class="page-header page-header--border-radius page-header--height page-header--light-theme page-header--opened page-header--without-js">
     <div class="container page-header__menu  menu">
-      <a href="#" class="menu__logo-mobile visually-hidden">
+      <a href="index.html" class="menu__logo-mobile visually-hidden">
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo.webp 1x, img/logo@2x.webp 2x" type="image/webp">
           <source media="(min-width: 1440px)" srcset="img/logo.png 1x, img/logo@2x.png 2x" type="image/png">
@@ -26,7 +26,7 @@
             height="30" alt="Логотип" />
         </picture>
       </a>
-      <a href="#" class="menu__logo-mobile-dark">
+      <a href="index.html" class="menu__logo-mobile-dark">
         <picture>
           <source media="(min-width: 768px)" srcset="img/logo-medium-dark.webp 1x, img/logo-medium-dark@2x.webp 2x"
             type="image/webp">
@@ -153,12 +153,12 @@
     </div>
     <div class="page-header__caption page-header__caption--without-js container">
       <span class="text">Попутчики</span>
-      <div class="page-header__return-to-main">
+      <a href="index.html" class="page-header__return-to-main link">
         <span class="page-header__back-link-text">На главную</span>
         <svg class="" width="32" height="16">
           <use xlink:href="img/sprite.svg#back-to-main"></use>
         </svg>
-      </div>
+      </a>
     </div>
     <svg class="page-header__underline page-header__underline--visually-hidden" width="358" height="8">
       <use xlink:href="img/sprite.svg#horizontal-line"></use>
@@ -335,6 +335,9 @@
                     </li>
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Венгрия</a>
+                    </li>
+                    <li class="filter__country country-list__item">
+                      <a href="#" class="link filter__country-text text">Венесуэла</a>
                     </li>
                     <li class="filter__country country-list__item">
                       <a href="#" class="link filter__country-text text">Восточный Тимор</a>
