--- a/source/companions.html
+++ b/source/companions.html
@@ -897,7 +897,7 @@
             <svg class="filter__close-icon" width="14" height="14">
               <use xlink:href="img/sprite.svg#toggle-close"></use>
             </svg>
-            <span class="filter__button-caption button__main-caption">СВЕРНУТЬ</span>
+            <span class="filter__button-caption button__main-caption text">СВЕРНУТЬ</span>
           </button>
         </div>
       </div>
@@ -1116,7 +1116,7 @@
                 </li>
               </ul>
               <button type="submit" class="choose-companion__show button button--light-theme">
-                <span class="choose-companion__show-caption button__main-caption">Показать</span>
+                <span class="choose-companion__show-caption button__main-caption text">Показать</span>
               </button>
             </div>
           </form>
@@ -1767,7 +1767,7 @@
               <svg class="companions-operations__icon icon icon--active" width="14" height="14">
                 <use xlink:href="img/sprite.svg#plus"></use>
               </svg>
-              <span class="companions-operations__button-caption button__main-caption">ПОКАЗАТЬ ЕЩЕ</span>
+              <span class="companions-operations__button-caption button__main-caption text">ПОКАЗАТЬ ЕЩЕ</span>
             </a>
             <div class="companions__navigation companions__navigation-container">
               <div class="companions__pages">
