--- a/source/directions.html
+++ b/source/directions.html
@@ -575,7 +575,7 @@
               </div>
               <a href="#step2"
                 class="add-plans__button-step add-plans__button-step--outsideflow button button--middle-theme">
-                <span class="add-plans__button-caption button__main-caption">Следующий шаг</span>
+                <span class="add-plans__button-caption button__main-caption text">Следующий шаг</span>
                 <svg class="add-plans__arrow" width="10" height="18" viewBox="0 0 10 18"
                   xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#arrow-right-thick"></use>
@@ -1103,7 +1103,7 @@
               </ul>
               <div class="step-list__buttons">
                 <button type="button" class="add-plans__add-country button button--transparent-theme">
-                  <span class="add-plans__add-country-text button__main-caption">ДОБАВИТЬ СТРАНУ</span>
+                  <span class="add-plans__add-country-text button__main-caption text">ДОБАВИТЬ СТРАНУ</span>
                   <svg class="step-list__add-plus step-list__plus--2" width="14" height="14">
                     <use xlink:href="img/sprite.svg#plus"></use>
                   </svg>
@@ -1113,7 +1113,7 @@
                 </svg>
                 <div class="step-list__nav-buttons step-list__nav-buttons--1">
                   <a href="#step3" class="add-plans__button-step button button--middle-theme">
-                    <span class="add-plans__button-caption button__main-caption">Следующий шаг</span>
+                    <span class="add-plans__button-caption button__main-caption text">Следующий шаг</span>
                     <svg class="add-plans__arrow" width="10" height="18" viewBox="0 0 10 18"
                       xmlns="http://www.w3.org/2000/svg">
                       <use xlink:href="img/sprite.svg#arrow-right-thick"></use>
@@ -1124,7 +1124,7 @@
                     <svg class="add-plans__back icon icon--active" width="10" height="18">
                       <use xlink:href="img/sprite.svg#arrow-left-thick"></use>
                     </svg>
-                    <span class="step-list__step-back-caption button__main-caption">На шаг назад</span>
+                    <span class="step-list__step-back-caption button__main-caption text">На шаг назад</span>
                   </a>
                 </div>
               </div>
@@ -1209,7 +1209,7 @@
               </div>
               <div class="step-list__nav-buttons">
                 <button type="submit" class="add-plans__button-step add-plans__send button button--middle-theme">
-                  <span class="add-plans__button-caption button__main-caption">Отправить</span>
+                  <span class="add-plans__button-caption button__main-caption text">Отправить</span>
                   <svg class="add-plans__arrow" width="10" height="18" viewBox="0 0 10 18"
                     xmlns="http://www.w3.org/2000/svg">
                     <use xlink:href="img/sprite.svg#arrow-right-thick"></use>
@@ -1220,7 +1220,7 @@
                   <svg class="add-plans__back icon icon--active" width="10" height="18">
                     <use xlink:href="img/sprite.svg#arrow-left-thick"></use>
                   </svg>
-                  <span class="button__main-caption">На шаг назад</span>
+                  <span class="button__main-caption text">На шаг назад</span>
                 </a>
               </div>
             </li>
